--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title> Leader Board </title>
-    
-    <link rel="icon" href="assets/Images/logo.ico" type="image/gif" sizes="32x32">	
+
+    <link rel="icon" href="assets/Images/logo.ico" type="image/gif" sizes="32x32">
     <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
-    
+    <!-- Navbar -->
+    <header>
+        <div class="container">
+            <div class="navbar">
+                <ul class="logo">
+                    <img src="assets/Images/logo.png" alt="logo">
+                    <span>Idea</span>
+                </ul>
+                <ul class="menu">
+                    <li><a href="#!"> Home </a></li>
+                    <li><a href="#!"> About </a></li>
+                    <li><a href="#!"> Works </a></li>
+                    <li>
+                        <a href="#!">
+                            <img src="assets/Images/profile.png" alt="profile-avater">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
 </body>
+
 </html>
