Navbar responsive okk

--- a/index.html
+++ b/index.html
@@ -15,18 +15,26 @@
     <!-- Navbar -->
     <header>
         <div class="container">
-            <div class="navbar">
+            <div class="navbar">               
                 <ul class="logo">
-                    <img src="assets/Images/logo.png" alt="logo">
+                    <img src="assets/images/logo.png" alt="logo">
                     <span>Idea</span>
                 </ul>
+                
+                <!-- Create Toggle Button -->
+                <input type="checkbox" id="chk">
+                <label for="chk" class="chk-btn">
+                    <img src="assets/Images/bars.svg">
+                </label>
+                
                 <ul class="menu">
                     <li><a href="#!"> Home </a></li>
                     <li><a href="#!"> About </a></li>
                     <li><a href="#!"> Works </a></li>
                     <li>
                         <a href="#!">
-                            <img src="assets/Images/profile.png" alt="profile-avater">
+                            <img src="assets/images/profile.png" alt="profile-avater">
+                            <span> Profile </span>
                         </a>
                     </li>
                 </ul>
