Top Section Structure & Top Players Section Done

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <!-- Navbar -->
     <header>
         <div class="container">
-            <div class="navbar">               
+            <div class="navbar">
                 <ul class="logo">
                     <img src="assets/images/logo.png" alt="logo">
                     <span>Idea</span>
                 </ul>
-                
+
                 <!-- Create Toggle Button -->
                 <input type="checkbox" id="chk">
                 <label for="chk" class="chk-btn">
                     <img src="assets/Images/bars.svg">
                 </label>
-                
+
                 <ul class="menu">
                     <li><a href="#!"> Home </a></li>
                     <li><a href="#!"> About </a></li>
@@ -41,6 +41,44 @@
             </div>
         </div>
     </header>
+
+    <!-- Top Section -->
+    <div class="container">
+        <section class="topSection">
+            <!-- Top Players -->
+            <div class="top-players">
+                <h4 class="title"> Top Players </h4>
+                <div class="players">
+                    <div class="player">
+                        <img src="assets/images/players/player-1.png" alt="player 01">
+                        <span> John Smith </span>
+                    </div>
+                    <div class="player">
+                        <img src="assets/images/players/player-2.png" alt="player 02">
+                        <span> Pro Rasel </span>
+                    </div>
+                    <div class="player">
+                        <img src="assets/images/players/player-3.png" alt="player 03">
+                        <span> Abu Sufian </span>
+                    </div>
+                    <div class="player">
+                        <img src="assets/images/players/player-4.png" alt="player 04">
+                        <span> Shajedul Karim </span>
+                    </div>
+                    <div class="player">
+                        <img src="assets/images/players/player-5.png" alt="player 05">
+                        <span> Maruf Ahmed </span>
+                    </div>
+                    <div class="player">
+                        <img src="assets/images/players/player-6.png" alt="player 06">
+                        <span> Mujahid </span>
+                    </div>
+                </div>
+            </div>
+            <!-- Top Blogs -->
+            <div class="top-blogs"></div>
+        </section>
+    </div>
 </body>
 
 </html>
