Top Blog Section Added

--- a/index.html
+++ b/index.html
@@ -77,7 +77,39 @@
             </div>
             <hr>
             <!-- Top Blogs -->
-            <div class="top-blogs"></div>
+            <div class="top-blogs">
+                <h4 class="title"> Top Blogs </h4>
+                <div class="blogs">
+                    <div class="blog">
+                        <img src="assets/images/blogs/blog-1.png" alt="Blog 01">
+                        <div class="blog-content">
+                            <h4> 13 of My Favorite <br> UI/UX Goodies </h4>
+                            <span class="sm-text">By <a href="#!"> Tess Gadd </a></span>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="assets/images/blogs/blog-2.png" alt="Blog 02">
+                        <div class="blog-content">
+                            <h4> UI cheat sheet: list <br> vs grids </h4>
+                            <span class="sm-text">By <a href="#!"> Danny Sapio </a></span>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="assets/images/blogs/blog-3.png" alt="Blog 03">
+                        <div class="blog-content">
+                            <h4> 7 typography tips for interface design </h4>
+                            <span class="sm-text">By <a href="#!"> Jeremiah Lam </a></span>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="assets/images/blogs/blog-4.png" alt="Blog 04">
+                        <div class="blog-content">
+                            <h4> Your logo is copied </h4>
+                            <span class="sm-text">By <a href="#!"> Ferdinand Vogler </a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </body>
