Couse Section Done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <title> Leader Board </title>
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
+
     <link rel="icon" href="assets/Images/logo.ico" type="image/gif" sizes="32x32">
     <link rel="stylesheet" href="assets/style.css">
 </head>
@@ -111,7 +114,67 @@
                 </div>
             </div>
         </section>
+        <section class="bottomSection">
+            <div class="title"> Lates Course </div>
+            <div class="course">
+                <div class="latesCourse">
+                    <img src="assets/images/courses/course-1.png" alt="course 01">
+                    <h3> React - The Complete <br> Guide 2020 </h3>
+                    <p class="sm-text"> Reed Krakoff. </p>
+                    <div class="timing-review">
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star inActive"></i>
+                            <i class="fas fa-star inActive"></i>
+                            <span class="sm-text"> 3/5 </span>
+                        </div>
+                        <div class="timing">
+                            <i class="far fa-clock"></i>
+                            <span> 01.30 hr </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="latesCourse">
+                    <img src="assets/images/courses/course-2.png" alt="course 02">
+                    <h3> Powerpoint 2020 Master <br> Powerpoint Cour </h3>
+                    <p class="sm-text"> Walter Scott </p>
+                    <div class="timing-review">
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star inActive"></i>
+                            <i class="fas fa-star inActive"></i>
+                            <span class="sm-text"> 3/5 </span>
+                        </div>
+                        <div class="timing">
+                            <i class="far fa-clock"></i>
+                            <span> 01.30 hr </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="latesCourse">
+                    <img src="assets/images/courses/course-3.png" alt="course 03">
+                    <h3> The Complete JavaScript <br> Course 2020 </h3>
+                    <p class="sm-text"> Reed Krakoff. </p>
+                    <div class="timing-review">
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star inActive"></i>
+                            <i class="fas fa-star inActive"></i>
+                            <span class="sm-text"> 3/5 </span>
+                        </div>
+                        <div class="timing">
+                            <i class="far fa-clock"></i>
+                            <span> 01.30 hr </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-</body>
-
-</html>
+</body></html>
