--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
 
-    <link rel="icon" href="assets/Images/logo.ico" type="image/gif" sizes="32x32">
+    <link rel="icon" href="assets/images/icon/logo.ico" type="image/gif" sizes="32x32">
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
@@ -20,14 +20,14 @@
         <div class="container">
             <div class="navbar">
                 <ul class="logo">
-                    <img src="assets/images/logo.png" alt="logo">
+                    <img src="assets/images/icon/logo.png" alt="logo">
                     <span>Idea</span>
                 </ul>
 
                 <!-- Create Toggle Button -->
                 <input type="checkbox" id="chk">
                 <label for="chk" class="chk-btn">
-                    <img src="assets/Images/bars.svg">
+                    <img src="assets/images/icon/bars.svg">
                 </label>
 
                 <ul class="menu">
@@ -36,7 +36,7 @@
                     <li><a href="#!"> Works </a></li>
                     <li>
                         <a href="#!">
-                            <img src="assets/images/profile.png" alt="profile-avater">
+                            <img src="assets/images/icon/profile.png" alt="profile-avater">
                             <span> Profile </span>
                         </a>
                     </li>
