Image Url Change - image to img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
 
-    <link rel="icon" href="assets/images/icon/logo.ico" type="image/gif" sizes="32x32">
+    <link rel="icon" href="assets/img/icon/logo.ico" type="image/gif" sizes="32x32">
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
@@ -20,14 +20,14 @@
         <div class="container">
             <div class="navbar">
                 <ul class="logo">
-                    <img src="assets/images/icon/logo.png" alt="logo">
+                    <img src="assets/img/icon/logo.png" alt="logo">
                     <span>Idea</span>
                 </ul>
 
                 <!-- Create Toggle Button -->
                 <input type="checkbox" id="chk">
                 <label for="chk" class="chk-btn">
-                    <img src="assets/images/icon/bars.svg">
+                    <img src="assets/img/icon/bars.svg">
                 </label>
 
                 <ul class="menu">
@@ -36,7 +36,7 @@
                     <li><a href="#!"> Works </a></li>
                     <li>
                         <a href="#!">
-                            <img src="assets/images/icon/profile.png" alt="profile-avater">
+                            <img src="assets/img/icon/profile.png" alt="profile-avater">
                             <span> Profile </span>
                         </a>
                     </li>
@@ -53,27 +53,27 @@
                 <h4 class="title"> Top Players </h4>
                 <div class="players">
                     <div class="player">
-                        <img src="assets/images/players/player-1.png" alt="player 01">
+                        <img src="assets/img/players/player-1.png" alt="player 01">
                         <span> John Smith </span>
                     </div>
                     <div class="player">
-                        <img src="assets/images/players/player-2.png" alt="player 02">
+                        <img src="assets/img/players/player-2.png" alt="player 02">
                         <span> Pro Rasel </span>
                     </div>
                     <div class="player">
-                        <img src="assets/images/players/player-3.png" alt="player 03">
+                        <img src="assets/img/players/player-3.png" alt="player 03">
                         <span> Abu Sufian </span>
                     </div>
                     <div class="player">
-                        <img src="assets/images/players/player-4.png" alt="player 04">
+                        <img src="assets/img/players/player-4.png" alt="player 04">
                         <span> Shajedul Karim </span>
                     </div>
                     <div class="player">
-                        <img src="assets/images/players/player-5.png" alt="player 05">
+                        <img src="assets/img/players/player-5.png" alt="player 05">
                         <span> Maruf Ahmed </span>
                     </div>
                     <div class="player">
-                        <img src="assets/images/players/player-6.png" alt="player 06">
+                        <img src="assets/img/players/player-6.png" alt="player 06">
                         <span> Mujahid </span>
                     </div>
                 </div>
@@ -84,28 +84,28 @@
                 <h4 class="title"> Top Blogs </h4>
                 <div class="blogs">
                     <div class="blog">
-                        <img src="assets/images/blogs/blog-1.png" alt="Blog 01">
+                        <img src="assets/img/blogs/blog-1.png" alt="Blog 01">
                         <div class="blog-content">
                             <h4> 13 of My Favorite <br> UI/UX Goodies </h4>
                             <span class="sm-text">By <a href="#!"> Tess Gadd </a></span>
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="assets/images/blogs/blog-2.png" alt="Blog 02">
+                        <img src="assets/img/blogs/blog-2.png" alt="Blog 02">
                         <div class="blog-content">
                             <h4> UI cheat sheet: list <br> vs grids </h4>
                             <span class="sm-text">By <a href="#!"> Danny Sapio </a></span>
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="assets/images/blogs/blog-3.png" alt="Blog 03">
+                        <img src="assets/img/blogs/blog-3.png" alt="Blog 03">
                         <div class="blog-content">
                             <h4> 7 typography tips for interface design </h4>
                             <span class="sm-text">By <a href="#!"> Jeremiah Lam </a></span>
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="assets/images/blogs/blog-4.png" alt="Blog 04">
+                        <img src="assets/img/blogs/blog-4.png" alt="Blog 04">
                         <div class="blog-content">
                             <h4> Your logo is copied </h4>
                             <span class="sm-text">By <a href="#!"> Ferdinand Vogler </a></span>
@@ -118,7 +118,7 @@
             <div class="title"> Lates Course </div>
             <div class="course">
                 <div class="latesCourse">
-                    <img src="assets/images/courses/course-1.png" alt="course 01">
+                    <img src="assets/img/courses/course-1.png" alt="course 01">
                     <h3> React - The Complete <br> Guide 2020 </h3>
                     <p class="sm-text"> Reed Krakoff. </p>
                     <div class="timing-review">
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="latesCourse">
-                    <img src="assets/images/courses/course-2.png" alt="course 02">
+                    <img src="assets/img/courses/course-2.png" alt="course 02">
                     <h3> Powerpoint 2020 Master <br> Powerpoint Cour </h3>
                     <p class="sm-text"> Walter Scott </p>
                     <div class="timing-review">
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <div class="latesCourse">
-                    <img src="assets/images/courses/course-3.png" alt="course 03">
+                    <img src="assets/img/courses/course-3.png" alt="course 03">
                     <h3> The Complete JavaScript <br> Course 2020 </h3>
                     <p class="sm-text"> Reed Krakoff. </p>
                     <div class="timing-review">
